objects/Guides_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>HCP_Quick_Reference__c</fullName>
        <label>HCP Quick Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_User_Manual__c</fullName>
        <label>HCP User Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Video_Guide__c</fullName>
        <label>HCP Video Guide</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PI_Quick_Reference__c</fullName>
        <label>PI Quick Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_User_Manual__c</fullName>
        <label>PI User Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Video_Guide__c</fullName>
        <label>PI Video Guide</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Quick_Reference__c</fullName>
        <label>Participant Quick Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_User_Manual__c</fullName>
        <label>Participant User Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Video_Guide__c</fullName>
        <label>Participant Video Guide</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Guides Setting</label>
    <pluralLabel>Guides Settings</pluralLabel>
</CustomObject>